added normal pdf calculation to histogram, and colorama colored text highlighting feature

--- a/test_stations.ipynb
+++ b/test_stations.ipynb
@@ -26,7 +26,7 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm import *\n",
-    "\n",
+    "from colorama import Fore\n",
     "matplotlib.style.use('ggplot')\n",
     "%matplotlib inline"
    ]
@@ -483,11 +483,15 @@
    },
    "outputs": [],
    "source": [
-    "a,b,c = plt.hist(df_mean.anom, bins=80, normed=True)\n",
+    "a, bins, c = plt.hist(df_mean.anom, bins=80, normed=True)\n",
     "plt.title(r\"Romanian $\\delta$ temperature\")\n",
     "plt.xlabel(r\"$\\delta$ Temp. °C\")\n",
     "plt.ylim(0,0.13)\n",
     "plt.vlines(anom, 0, 0.16, label=\"day to check\")\n",
+    "\n",
+    "y = matplotlib.mlab.normpdf(bins, df_mean.anom.mean(), df_mean.anom.std())\n",
+    "plt.plot(bins, y, label='Gaussian pdf')\n",
+    "\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -564,7 +568,8 @@
     "    plt.xlabel(r\"$\\delta$ T. [°C]\")\n",
     "    plt.show()\n",
     "    ranked = np.array(sorted(df_mean.anom.values))\n",
-    "    print(\"𝛿 of {0:3.2f}°C has a percentile rank of {1:3.2f}\".format(anom, len(ranked[anom > ranked]) / len(ranked)))"
+    "    print(\"𝛿 of {0:3.2f}°C has a \".format(anom),end=\"\")\n",
+    "    print(Fore.RED + \"percentile rank of {0:3.2f}\".format(len(ranked[anom > ranked]) / len(ranked)))"
    ]
   },
   {
@@ -575,17 +580,8 @@
    },
    "outputs": [],
    "source": [
-    "check_anomaly(date=20161020, temperature=10)"
+    "check_anomaly(date=20161020, temperature=15)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
