added linear regression section, and also some seaborn example, and a couple of links in the readme

--- a/test_stations.ipynb
+++ b/test_stations.ipynb
@@ -111,6 +111,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now we have a time-aware time series, we can do some really cool and intelligent sub-scripting of the data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Call one day\n",
+    "\n",
+    "test_data.TAVG['1998-01-01']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Call a few days\n",
+    "\n",
+    "test_data.TAVG['1998-01-06':'1998-02-07']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Call a whole month\n",
+    "\n",
+    "test_data.TAVG['2000-01']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Call a large, date range just specifying years\n",
+    "\n",
+    "test_data.TAVG['1994':'1996']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read mutliple datasets\n",
+    "\n",
     "The preview plot is messy as our data are not contiguous, but as a quick-check, it seems like everything is more-or-less fine.\n",
     "\n",
     "So, reading a single file is easy, and straightforward. But we want to do some exploratory analysis on multiple station measurements. For this we will need to read all the station data together into a consistent data object. "
@@ -582,6 +643,225 @@
    "source": [
     "check_anomaly(date=20161020, temperature=15)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Long-term trends\n",
+    "## Time resampling\n",
+    "\n",
+    "Since we created a data structure that has time as an index, we have the benfit of easily re-sampling (binning correctly through time).\n",
+    "\n",
+    "E.g. to calculate the annual mean anomaly and trend we can do the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# simple way to re-bin data in Pandas (\"A\") means annually\n",
+    "\n",
+    "df_mean.anom.resample(\"A\").mean().plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Let's look at these data with a bit more sophistication (trend, and significance)\n",
+    "\n",
+    "linear regression taken from [Scipy library](http://www.scipy-lectures.org). \n",
+    "\n",
+    "Requires two terms: x = time index, y = temperature values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from scipy import stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "anom_annual = df_mean.anom.resample(\"A\").mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate uncertainy of mean based on [Mean Standard error](https://en.wikipedia.org/wiki/Standard_error)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sem_annual = df_mean.anom.resample(\"A\").std() / np.sqrt(df_mean.anom.resample(\"A\").count() -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "slope, intercept, rval, pval, stderr = stats.linregress(x=range(len(anom_annual.values)), y=anom_annual.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def my_slope(x, slope, intercept, stderr=None, kind=None):\n",
+    "    \"\"\"\n",
+    "    Return y-value for a given x based on slope and intercept.\n",
+    "    Changes to return upper or lower bounds, based on error, if keyword is given.\n",
+    "    kind: 'pos' = return upper error bound\n",
+    "          'neg' = return lower error bound\n",
+    "           None   = return mean regression line\n",
+    "    \"\"\"\n",
+    "    if kind:\n",
+    "        assert stderr, \"You forgot to include a value for stderr\"\n",
+    "        if kind is 'pos':\n",
+    "            return ((slope * x) + intercept) + stderr\n",
+    "        elif kind is 'neg':\n",
+    "            return ((slope * x) + intercept) - stderr\n",
+    "    else:\n",
+    "        return (slope * x) + intercept"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Use the slope, intercept and error to calculate a linear fit to the data\n",
+    "\n",
+    "fit = [ my_slope(x=x, slope=slope, intercept=intercept) for x in range(len(anom_annual)) ]\n",
+    "fit_pos = [ my_slope(x=x, slope=slope, intercept=intercept, stderr=stderr, kind='pos') for x in range(len(anom_annual)) ]\n",
+    "fit_neg = [ my_slope(x=x, slope=slope, intercept=intercept, stderr=stderr, kind='neg') for x in range(len(anom_annual)) ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Plot everything with errors, and print a summary of the stats...\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(1, 1, 1)\n",
+    "\n",
+    "ax.errorbar(anom_annual.index, anom_annual.values, yerr=sem_annual.values)\n",
+    "\n",
+    "ax.plot(anom_annual.index, fit, color='red', lw=0.75)\n",
+    "ax.plot(anom_annual.index, fit_pos, 'r--', lw=0.75)\n",
+    "ax.plot(anom_annual.index, fit_neg, 'r--', lw=0.75)\n",
+    "\n",
+    "#fig.title(\"Romania GHCN Annual temp. anomaly\")\n",
+    "#ax.ylabel(\"$\\delta$ Temp. °C\")\n",
+    "#ax.xlabel(\"Year\")\n",
+    "\n",
+    "my_text = r\"$y$ = {0:3.2f} $\\times x +$ {1:3.2f}$\\pm$ {2:3.2f}\".format(slope, intercept, stderr)\n",
+    "my_text += '\\n'+r'$r^2={0:3.2f}, p=${1:3.5f}'.format(rval*rval, pval)\n",
+    "\n",
+    "fig.text(0.15, 0.8, s=my_text)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ideally now, I would want to test the validity of the *p*-value by re-sampling. The question we want to test here is, is the relationship between time and temperature significant, therefore we can shuffle the time-dimension, re-test the relationships, and build a distribution of regressions to see if the one we have is significant in comparison to random data. Examples and more info in [one of my papers](http://www.swsc-journal.org/articles/swsc/abs/2013/01/swsc130020/swsc130020.html).\n",
+    "\n",
+    "Also, more info on [my website](http://www.benlaken.com)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More data viz libraries\n",
+    "\n",
+    "### Seaborn\n",
+    "\n",
+    "[Anscobe's quartet](https://en.wikipedia.org/wiki/Anscombe%27s_quartet) example from the [Seaborn library](https://seaborn.github.io/index.html).\n",
+    "\n",
+    "The four datasets all have: \n",
+    "\n",
+    " property | value\n",
+    " -------- | -----\n",
+    " Mean of x | 9\n",
+    " Sample variance of x| 11\n",
+    " Mean of y | 7.50 (to 2 decimal places)\n",
+    " Sample variance of y |\t4.122 or 4.127 (to 3 decimal places) \n",
+    " Correlation between x and y |\t0.816 (to 3 decimal places) \n",
+    " Linear regression line | y = 3.00 + 0.500x (to 2 and 3 decimal places, respectively)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "sns.set(style=\"darkgrid\")\n",
+    "sns.set(style=\"ticks\")\n",
+    "\n",
+    "# Load the example dataset for Anscombe's quartet\n",
+    "df = sns.load_dataset(\"anscombe\")\n",
+    "\n",
+    "# Show the results of a linear regression within each dataset\n",
+    "sns.lmplot(x=\"x\", y=\"y\", col=\"dataset\", hue=\"dataset\", data=df,\n",
+    "           col_wrap=2, ci=None, palette=\"muted\", size=4,\n",
+    "           scatter_kws={\"s\": 50, \"alpha\": 1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
