added a note about a compatibility issue on Windows with Python 3.x

--- a/remote_netcdf.ipynb
+++ b/remote_netcdf.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "Examples of accessing Netcdf data via TRHEDDS/OPENDAP services in Python, and plotting in Basemaps\n",
     "\n",
-    "First, import libraries"
+    "First, import libraries\n",
+    "\n",
+    "**Important note** It looks like for users on Windows with Python 3.x this demo will not work. It will work on Windows with Python 2.7 however. If you are on Linux or Mac (or running 2.7 in Windows) you can add the Basemap package with conda using the command `conda install Basemap`."
    ]
   },
   {
