updated some broken opendap data links

--- a/remote_netcdf.ipynb
+++ b/remote_netcdf.ipynb
@@ -36,7 +36,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Next, link to a remote dataset"
+    "### Next, link to a remote dataset\n",
+    "\n",
+    "For example, ocean data from NOAA' [catalouge](http://coastwatch.pfeg.noaa.gov/erddap/griddap/index.html?page=1&itemsPerPage=1000)"
    ]
   },
   {
@@ -47,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "nc = Dataset('http://www.ncdc.noaa.gov/thredds/dodsC/OISST-V2-AVHRR_agg')"
+    "nc = Dataset('http://coastwatch.pfeg.noaa.gov/erddap/griddap/ncdcOisst2Agg')"
    ]
   },
   {
@@ -109,7 +111,7 @@
     "%%time\n",
     "# based on example at http://matplotlib.org/basemap/users/examples.html\n",
     "date = datetime(2007,12,15,0)    # Specify date to plot.\n",
-    "dataset = Dataset('http://www.ncdc.noaa.gov/thredds/dodsC/OISST-V2-AVHRR_agg')\n",
+    "dataset = Dataset('http://coastwatch.pfeg.noaa.gov/erddap/griddap/ncdcOisst2Agg')\n",
     "timevar = dataset.variables['time']\n",
     "timeindex = date2index(date, timevar) # find time index for desired date.\n",
     "\n",
@@ -120,8 +122,8 @@
     "ice = dataset.variables['ice'][timeindex,:].squeeze()\n",
     "\n",
     "# read lats and lons (representing centers of grid boxes).\n",
-    "lats = dataset.variables['lat'][:]\n",
-    "lons = dataset.variables['lon'][:]\n",
+    "lats = dataset.variables['latitude'][:]\n",
+    "lons = dataset.variables['longitude'][:]\n",
     "lons, lats = np.meshgrid(lons,lats)\n",
     "\n",
     "# create figure, axes instances.\n",
@@ -170,6 +172,7 @@
     "hh = date.hour\n",
     "\n",
     "# set OpenDAP server URL.\n",
+    "\n",
     "URLbase=\"http://nomads.ncdc.noaa.gov/thredds/dodsC/modeldata/cmd_pgbh/\"\n",
     "URL=URLbase+\"%04i/%04i%02i/%04i%02i%02i/pgbh00.gdas.%04i%02i%02i%02i.grb2\" %\\\n",
     "             (yyyy,yyyy,mm,yyyy,mm,dd,yyyy,mm,dd,hh)\n",
@@ -309,6 +312,18 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "widgets": {
+   "state": {
+    "df422b61db804b64842d82651c19e0ee": {
+     "views": [
+      {
+       "cell_index": 13
+      }
+     ]
+    }
+   },
+   "version": "1.2.0"
   }
  },
  "nbformat": 4,
